--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://nicosbustosgonzalez.github.io/SCL021-memory-match",
   "name": "memory-match",
   "version": "1.0.0",
   "description": "Memory Match Game",
